# python-sdk

./: .bumpversion.toml  CLAUDE.md  pyproject.toml  ruff.toml
.claude/commands/: fix-issue.md
.github/workflows/: e2e-tests.yml  publish.yml  tests.yml
.windsurf/workflows/: vrl-e2e.md
a2c_smcp/: __init__.py  smcp.py
a2c_smcp/agent/: base.py  client.py  sync_client.py
a2c_smcp/computer/: computer.py
a2c_smcp/computer/cli/: interactive_impl.py  utils.py
a2c_smcp/computer/mcp_clients/: base_client.py  manager.py  model.py
a2c_smcp/computer/socketio/: client.py
a2c_smcp/server/: namespace.py  sync_namespace.py
docs/: QA.md  README.md  index.md
docs/appendix/: faq.md
docs/guides/: agent-guide.md  cli-guide.md  computer-guide.md  getting-started.md  server-guide.md
docs/specification/: architecture.md  data-structures.md  error-handling.md  events.md  index.md  room-model.md  security.md
tests/e2e/agent/: test_async_agent_e2e.py  test_sync_agent_e2e.py
tests/e2e/computer/: test_cli_tc_vrl.py
tests/e2e/computer/inputs/: test_inputs.py
tests/e2e/server/: test_async_server_e2e.py
tests/integration_tests/: mock_sync_smcp_server.py
tests/integration_tests/agent/: test_async_client.py  test_base.py  test_sync_client.py
tests/integration_tests/computer/: test_smcp_tool_data_format.py
tests/integration_tests/computer/cli/: test_interactive_tc.py
tests/integration_tests/computer/socketio/: test_client.py  (+1 more)
tests/integration_tests/server/: test_namespace_async.py  test_namespace_sync.py
tests/unit_tests/agent/: test_async_client.py  test_sync_client.py
tests/unit_tests/computer/: test_socketio_client_desktop.py
tests/unit_tests/server/: test_smcp_namespace.py  test_sync_base.py  test_sync_smcp_namespace.py
(+10 files in other folders)
