[project]
name = "a2c-smcp"
version = "0.1.1-rc14"
description = "The official Python Computer Client SDK for A2C-SMCP"
authors = [
    {name = "JQQ", email = "jqq1716@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mcp (==1.15.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "transitions (>=0.9.3,<0.10.0)",
    "python-socketio (>=5.13.0,<6.0.0)",
    "vrl-python (>=0.1.0,<0.2.0)",
    "tzlocal (>=5.0.0,<6.0.0)",
    "yarl>=1.22.0",
]

[project.scripts]
a2c-computer = "a2c_smcp.computer.cli.main:main"

[project.optional-dependencies]
cli = [
    "typer >=0.17.4,<1.0.0",
    "rich >=14.1.0,<15.0.0",
    "prompt-toolkit >=3.0.52,<4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest >=8.4.1,<9.0.0",
    "ruff >=0.12.9,<0.13.0",
    "mypy >=1.17.1,<2.0.0",
    "poethepoet >=0.37.0,<0.38.0"
]
test = [
    "polyfactory >=2.22.2,<3.0.0",
    "pytest-asyncio >=1.1.0,<2.0.0",
    "pytest-cov >=6.2.1,<7.0.0",
    "pytest-mock >=3.14.1,<4.0.0",
    "inline-snapshot >=0.27.2,<0.28.0",
    "pytest-dotenv >=0.5.2,<0.6.0",
    "aiohttp >=3.12.15,<4.0.0",
    "pexpect >=4.9.0,<5.0.0",
    "werkzeug >=3.1.3,<4.0.0",
    "requests >=2.32.5,<3.0.0",
    "websocket-client >=1.8.0,<2.0.0"
]
build = [
    "bump-my-version>=1.2.4",
]

[tool.poe.tasks]
test = "pytest tests/unit_tests tests/integration_tests"
test-cov = "pytest tests -m 'not e2e' --cov a2c_smcp --cov-report=term-missing --cov-fail-under=0 --cov-config=.coveragerc"
test-e2e = "pytest tests -m e2e"
lint = "ruff check --fix ."
format = "ruff format ."
